# habit-calendar

./: README.md  cc_profile.html  install.ps1  install.sh  parse_test.rs
.github/workflows/: pages.yml  release.yml
docs/: index.html
extension/: background.js  manifest.json  popup.html  popup.js
extension/content/: inject.js  leetcode.js  takeuforward.js
mobile-companion/: app.json  package-lock.json  package.json
mobile-companion/extension/: background.js  manifest.json
mobile-companion/src/app/: index.tsx
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/daemon/: codechef.rs  devices.rs  history.rs  leetcode.rs  mod.rs  server.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src/css/: calendar.css  dashboard.css  dayview.css  devices.css  setup.css  variables.css
src/js/: app.js  calendar.js  dashboard.js  dayview.js  devices.js  setup.js
