[package]
name = "habit-calendar"
version = "0.1.0"
description = "A local habit-accountability calendar app"
authors = ["trijal"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
scraper = "0.18"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
dirs = "5"
log = "0.4"
env_logger = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
local-ip-address = "0.6.13"
